2008-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_i_maxflow_value_undirected)
	(igraph_maxflow_value, igraph_i_mincut_undirected) : allow capacity
	vector to be NULL

2008-02-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_layout_lgl) : added progress meter

2008-01-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : added interface to walktrap
	community detection, added Graph.get_diameter() and
	Graph.farthest_points()
	
	* src/walktrap.cpp : added error handling for isolated vertices

2008-01-27  Gabor Csardi  <csardi@rmki.kfki.hu>
	
	* src/centrality.c (igraph_eigenvector_centrality)
	(igraph_i_kleinberg, igraph_pagerank) : use fix starting vector, based 
	on vertex degree
	
	* src/arpack_internal.h : corrections when external libraries are used
	
	* src/arpack.c (igraph_arpack_rssolve, igraph_arpack_rnsolve) : 
	make it possible to supply a start vector in the first column of 'vectors'
	
	* src/arpack.c (igraph_arpack_rssolve, igraph_arpack_rnsolve) : 
	keep the options argument constant (except if there is an error)

	* examples/simple/igraph_pagerank.c : small bug fixed

2008-01-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-gml-lexer.l
	* src/foreign-lgl-lexer.l
	* src/foreign-pajek-lexer.l
	* src/foreign-ncol-lexer.l : make sure we recognize all line endings,
	\n, \r, \n\r, \r\n
	* examples/simple/lineendings.c : added

2008-01-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : corrected some type
	mismatches that caused erroneous behaviour on 64 bit
	architectures
	
	* interfaces/python/src/graphobject.c : added interface to
	igraphmodule_Graph_permute_vertices
	
	* interfaces/python/package/test/isomorphism.py : added
	test case

2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_kamada_kawai)
	(igraph_layout_kamada_kawai_3d) : support initial position
